add rotation to sec, min and hour hand

--- a/clock.html
+++ b/clock.html
@@ -60,9 +60,11 @@
         top: 50%;
         transform-origin: 100%;
         transform: rotate(90deg);
+        transition: all 0.5s;
+        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
       }
     </style>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
